@@ -1,22 +1,26 @@
 package com.privatebay.virtualknowledge.controller;
 
+import com.privatebay.virtualknowledge.dto.AuthResponseDTO;
+import com.privatebay.virtualknowledge.dto.UserRequestDTO;
+import com.privatebay.virtualknowledge.entity.Department;
 import com.privatebay.virtualknowledge.entity.Role;
 import com.privatebay.virtualknowledge.entity.User;
-import com.privatebay.virtualknowledge.enums.RoleType;
+import com.privatebay.virtualknowledge.enums.UserStatus;
+import com.privatebay.virtualknowledge.repository.DepartmentRepository;
 import com.privatebay.virtualknowledge.repository.RoleRepository;
 import com.privatebay.virtualknowledge.repository.UserRepository;
 import com.privatebay.virtualknowledge.service.JwtService;
 import org.springframework.http.HttpStatus;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
+import java.util.Collections;
 
-import java.time.LocalDateTime;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @CrossOrigin(origins = "http://localhost:4200")
 @RestController
@@ -27,69 +31,60 @@ public class AuthController {
 	private final PasswordEncoder passwordEncoder;
 	private final JwtService jwtService;
 	private final RoleRepository roleRepository;
+	private final DepartmentRepository departmentRepository;
+	private final AuthenticationManager authenticationManager;
 
 	public AuthController(UserRepository userRepository, PasswordEncoder passwordEncoder, JwtService jwtService,
-			RoleRepository roleRepository) {
+			RoleRepository roleRepository, DepartmentRepository departmentRepository,
+			AuthenticationManager authenticationManager) {
 		this.userRepository = userRepository;
 		this.passwordEncoder = passwordEncoder;
 		this.jwtService = jwtService;
 		this.roleRepository = roleRepository;
+		this.departmentRepository = departmentRepository;
+		this.authenticationManager = authenticationManager;
 	}
 
 	@PostMapping("/register")
-	public Map<String, Object> register(@RequestBody Map<String, String> body) {
-		String email = body.get("email");
-
-		if (userRepository.findByEmail(email).isPresent()) {
-			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "El email ya está registrado");
+	public AuthResponseDTO register(@RequestBody UserRequestDTO request) {
+		if (userRepository.findByEmail(request.getEmail()).isPresent()) {
+			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Email already registered");
 		}
 
-		String roleStr = body.getOrDefault("role", "ROLE_USER").toUpperCase();
-		RoleType roleType = RoleType.valueOf(roleStr);
+		Role role = roleRepository.findById(request.getRoleId())
+				.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Rol not found"));
 
-		Role userRole = roleRepository.findByName(roleType)
-				.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Rol no encontrado"));
+		Department department = departmentRepository.findById(request.getDepartmentId())
+				.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Department not found"));
 
 		User user = new User();
-		user.setName(body.get("name"));
-		user.setEmail(email);
-		user.setPassword(passwordEncoder.encode(body.get("password")));
-		user.setRegistrationDate(LocalDateTime.now());
-		user.setStatus("ACTIVE");
-		user.addRole(userRole);
+		user.setFirstName(request.getFirstName());
+		user.setLastName(request.getLastName());
+		user.setEmail(request.getEmail());
+		user.setPassword(passwordEncoder.encode(request.getPassword()));
+		user.setStatus(UserStatus.valueOf(request.getStatus().toUpperCase()));
+		user.setRole(role);
+		user.setDepartment(department);
 
 		User savedUser = userRepository.save(user);
 
-		List<SimpleGrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(roleType.name()));
-		String token = jwtService.generateToken(email, savedUser.getId(), authorities);
+		String token = jwtService.generateToken(savedUser.getEmail(), savedUser.getId(), Collections.singletonList(
+				new SimpleGrantedAuthority(role.getName().name())));
 
-		return Map.of("token", token, "id", savedUser.getId(), "message", "Usuario registrado correctamente");
+		return new AuthResponseDTO(token, savedUser.getId(), savedUser.getEmail(), savedUser.getFirstName(),
+				savedUser.getRole().getName().name(), savedUser.getDepartment().getName());
 	}
 
 	@PostMapping("/login")
-	public Map<String, Object> login(@RequestBody Map<String, String> body) {
-		User user = userRepository.findByEmail(body.get("email"))
-				.orElseThrow(() -> new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Usuario no encontrado"));
+	public AuthResponseDTO login(@RequestBody UserRequestDTO request) {
+		Authentication authentication = authenticationManager
+				.authenticate(new UsernamePasswordAuthenticationToken(request.getEmail(), request.getPassword()));
 
-		if (!passwordEncoder.matches(body.get("password"), user.getPassword())) {
-			throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Contraseña inválida");
-		}
+		UserDetails userDetails = (UserDetails) authentication.getPrincipal();
+		User user = userRepository.findByEmail(userDetails.getUsername()).orElseThrow();
 
-		List<SimpleGrantedAuthority> authorities = user.getRoles().stream()
-				.map(role -> new SimpleGrantedAuthority(role.getName().name())).collect(Collectors.toList());
-
-		String token = jwtService.generateToken(user.getEmail(), user.getId(), authorities);
-
-		Map<String, Object> response = new HashMap<>();
-		response.put("token", token);
-		response.put("id", user.getId());
-		response.put("name", user.getName() != null ? user.getName() : "");
-		response.put("email", user.getEmail());
-		response.put("roles",
-				authorities.stream().map(SimpleGrantedAuthority::getAuthority).collect(Collectors.toList()));
-		response.put("status", user.getStatus() != null ? user.getStatus() : "ACTIVE");
-
-		return response;
+		String token = jwtService.generateToken(user.getEmail(), user.getId(), authentication.getAuthorities());
+		return new AuthResponseDTO(token, user.getId(), user.getEmail(), user.getFirstName(),
+				user.getRole().getName().name(), user.getDepartment().getName());
 	}
-
 }
